@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-07T01:08:25Z",
+  "timestamp" : "2022-12-07T16:18:37Z",
   "count_outdated" : 703,
   "uniques_outdated" : 397,
-  "count" : 720,
-  "uniques" : 404,
+  "count" : 722,
+  "uniques" : 406,
   "clones" : [
     {
       "timestamp": "2022-11-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -53,6 +53,13 @@
       "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
