@@ -1,10 +1,10 @@
 {
-  "count": 17,
-  "uniques": 4,
+  "count": 19,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-11-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -36,6 +36,11 @@
       "timestamp": "2022-12-04T00:00:00Z",
       "count": 4,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
