@@ -1,3 +1,11 @@
+2022-12-07T16:18:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3640741174 # 1097
+* notice: last 14d: unq all: 5 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 703 / 404 720
+* notice: next accum: outdated-unq outdated-all / unq all: 397 703 / 406 722
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -1 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-11-23 2022-12-07]
+
 2022-12-07T01:08:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3634897495 # 1095
 * notice: last 14d: unq all: 4 17
